--- a/pdf-splitter/pom.xml
+++ b/pdf-splitter/pom.xml
@@ -18,6 +18,16 @@
 			<version>5.5.13.2</version>
 		</dependency>
 	</dependencies>
-
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
